Change links in NB

--- a/samples/week02/01-first-look-at-nn.ipynb
+++ b/samples/week02/01-first-look-at-nn.ipynb
@@ -2,6 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "# Reference\n",
     "\n",
@@ -11,14 +12,14 @@
     "\n",
     "If you like to run the example locally follow the instructions provided on [Keras website](https://keras.io/#installation)\n",
     "\n",
-    "[![Open In Colab](https://colab.research.google.com/assets/colab-badge.svg)](https://colab.research.google.com/github/digitalideation/digcre_h2201/blob/master/samples/week02/01-first-look-at-nn.ipynb)\n",
+    "[![Open In Colab](https://colab.research.google.com/assets/colab-badge.svg)](https://colab.research.google.com/github/digitalideation/digcre_h2301//blob/master/samples/week02/01-first-look-at-nn.ipynb)\n",
     "\n",
     "---"
-   ],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "# A first look at a neural network\n",
     "\n",
@@ -38,124 +39,125 @@
     "images, assembled by the National Institute of Standards and Technology (the NIST in MNIST) in the 1980s. You can think of \"solving\" MNIST \n",
     "as the \"Hello World\" of deep learning -- it's what you do to verify that your algorithms are working as expected. As you become a machine \n",
     "learning practitioner, you will see MNIST come up over and over again, in scientific papers, blog posts, and so on."
-   ],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "The MNIST dataset comes pre-loaded in Keras, in the form of a set of four Numpy arrays:"
-   ],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "from tensorflow.keras.datasets import mnist\n",
     "\n",
     "(train_images, train_labels), (test_images, test_labels) = mnist.load_data()"
-   ],
-   "outputs": [],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "`train_images` and `train_labels` form the \"training set\", the data that the model will learn from. The model will then be tested on the \n",
     "\"test set\", `test_images` and `test_labels`. Our images are encoded as Numpy arrays, and the labels are simply an array of digits, ranging \n",
     "from 0 to 9. There is a one-to-one correspondence between the images and the labels.\n",
     "\n",
     "Let's have a look at the training data:"
-   ],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "train_images.shape"
-   ],
-   "outputs": [],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "len(train_labels)"
-   ],
-   "outputs": [],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "train_labels"
-   ],
-   "outputs": [],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "Let's have a look at the test data:"
-   ],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "test_images.shape"
-   ],
-   "outputs": [],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "len(test_labels)"
-   ],
-   "outputs": [],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "test_labels"
-   ],
-   "outputs": [],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "%matplotlib inline\n",
     "from matplotlib.pyplot import imshow\n",
     "imshow(test_images[0], cmap='gray')"
-   ],
-   "outputs": [],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "Our workflow will be as follow: first we will present our neural network with the training data, `train_images` and `train_labels`. The \n",
     "network will then learn to associate images and labels. Finally, we will ask the network to produce predictions for `test_images`, and we \n",
     "will verify if these predictions match the labels from `test_labels`.\n",
     "\n",
     "Let's build our network -- again, remember that you aren't supposed to understand everything about this example just yet."
-   ],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "from tensorflow import keras\n",
     "from tensorflow.keras import layers\n",
@@ -163,12 +165,11 @@
     "    layers.Dense(512, activation=\"relu\"),\n",
     "    layers.Dense(10, activation=\"softmax\")\n",
     "])\n"
-   ],
-   "outputs": [],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "\n",
     "The core building block of neural networks is the \"layer\", a data-processing module which you can conceive as a \"filter\" for data. Some \n",
@@ -190,33 +191,34 @@
     "classified).\n",
     "\n",
     "The exact purpose of the loss function and the optimizer will be made clear throughout the next two chapters."
-   ],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "model.compile(optimizer='rmsprop',\n",
     "                loss='sparse_categorical_crossentropy',\n",
     "                metrics=['accuracy'])"
-   ],
-   "outputs": [],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "\n",
     "Before training, we will preprocess our data by reshaping it into the shape that the network expects, and scaling it so that all values are in \n",
     "the `[0, 1]` interval. Previously, our training images for instance were stored in an array of shape `(60000, 28, 28)` of type `uint8` with \n",
     "values in the `[0, 255]` interval. We transform it into a `float32` array of shape `(60000, 28 * 28)` with values between 0 and 1."
-   ],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "train_images = train_images.reshape((60000, 28 * 28))\n",
     "train_images = train_images/ 255\n",
@@ -226,57 +228,56 @@
     "\n",
     "print(train_images.shape)\n",
     "print(test_images.shape)"
-   ],
-   "outputs": [],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "We are now ready to train our network, which in Keras is done via a call to the `fit` method of the network: \n",
     "we \"fit\" the model to its training data."
-   ],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "model.fit(train_images, train_labels, epochs=5, batch_size=128)"
-   ],
-   "outputs": [],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "Two quantities are being displayed during training: the \"loss\" of the network over the training data, and the accuracy of the network over \n",
     "the training data.\n",
     "\n",
     "We quickly reach an accuracy of 0.989 (i.e. 98.9%) on the training data. Now let's check that our model performs well on the test set too:"
-   ],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "test_loss, test_acc = model.evaluate(test_images, test_labels)"
-   ],
-   "outputs": [],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "print('test_acc:', test_acc)"
-   ],
-   "outputs": [],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "\n",
     "Our test set accuracy turns out to be 97.8% -- that's quite a bit lower than the training set accuracy. \n",
@@ -288,19 +289,20 @@
     "less than 20 lines of Python code. In the next chapter, we will go in detail over every moving piece we just previewed, and clarify what is really \n",
     "going on behind the scenes. You will learn about \"tensors\", the data-storing objects going into the network, about tensor operations, which \n",
     "layers are made of, and about gradient descent, which allows our network to learn from its training examples."
-   ],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "## Test the model"
-   ],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
@@ -313,15 +315,16 @@
     "plt.title('predicted:' + str(prediction.argmax()))\n",
     "image = image.reshape(28, 28)\n",
     "plt.imshow(image, cmap='gray')"
-   ],
-   "outputs": [],
-   "metadata": {}
+   ]
   }
  ],
  "metadata": {
+  "interpreter": {
+   "hash": "7598e5728af815c881faf518782755ff0b9d6761e660b88c35864144a8814437"
+  },
   "kernelspec": {
-   "name": "python3",
-   "display_name": "Python 3.7.9 64-bit ('keras': conda)"
+   "display_name": "Python 3.7.9 64-bit ('keras': conda)",
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -334,9 +337,6 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.7.9"
-  },
-  "interpreter": {
-   "hash": "7598e5728af815c881faf518782755ff0b9d6761e660b88c35864144a8814437"
   }
  },
  "nbformat": 4,
