--- a/samples/sd-webui-fooocus.ipynb
+++ b/samples/sd-webui-fooocus.ipynb
@@ -179,62 +179,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "05eb4405-c5bc-45cf-8f2f-f529c18170c1",
-   "metadata": {
-    "scrolled": true
-   },
-   "outputs": [],
-   "source": [
-    "import huggingface_hub\n",
-    "\n",
-    "# SD models\n",
-    "local_dir = sd_model_dir / 'Stable-diffusion'\n",
-    "\n",
-    "# SD 1.5\n",
-    "repo_id='runwayml/stable-diffusion-v1-5'\n",
-    "filename = 'v1-5-pruned-emaonly.safetensors'\n",
-    "huggingface_hub.hf_hub_download(\n",
-    "    repo_id=repo_id,\n",
-    "    filename=filename,\n",
-    "    local_dir=local_dir\n",
-    ")\n",
-    "\n",
-    "# SDXL\n",
-    "repo_id='stabilityai/stable-diffusion-xl-base-1.0'\n",
-    "# Base model\n",
-    "filename = 'sd_xl_base_1.0.safetensors'\n",
-    "huggingface_hub.hf_hub_download(\n",
-    "    repo_id=repo_id,\n",
-    "    filename=filename,\n",
-    "    local_dir=local_dir\n",
-    ")\n",
-    "# VAE\n",
-    "filename = 'sd_xl_base_1.0_0.9vae.safetensors'\n",
-    "huggingface_hub.hf_hub_download(\n",
-    "    repo_id=repo_id,\n",
-    "    filename=filename,\n",
-    "    local_dir=local_dir\n",
-    ")\n",
-    "\n",
-    "# ControlNet (There's a LOT here, hopefully we have enough disk space 🤞)\n",
-    "local_dir = sd_model_dir / 'ControlNet'\n",
-    "\n",
-    "# ControlNet 1.1 \n",
-    "huggingface_hub.snapshot_download(\n",
-    "    repo_id='lllyasviel/ControlNet-v1-1',\n",
-    "    allow_patterns='*.pth',\n",
-    "    local_dir=local_dir\n",
-    ")\n",
-    "# ControlNet XL\n",
-    "huggingface_hub.snapshot_download(\n",
-    "    repo_id='lllyasviel/sd_control_collection',\n",
-    "    local_dir=local_dir\n",
-    ")"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "id": "a6881fc7-384c-4167-8ddf-9abd92c7213a",
    "metadata": {
@@ -247,9 +191,7 @@
   {
    "cell_type": "markdown",
    "id": "d28c68bc-78c5-4d00-a420-02c1becdcef8",
-   "metadata": {
-    "jp-MarkdownHeadingCollapsed": true
-   },
+   "metadata": {},
    "source": [
     "## Install Fooocus (run once)"
    ]
@@ -310,7 +252,9 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "523dbb1d-4121-401f-aeed-09163568e906",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [],
    "source": [
     "!python {fooocus_dir}/entry_with_update.py --share"
@@ -319,9 +263,7 @@
   {
    "cell_type": "markdown",
    "id": "c535d730-edd7-4d98-97a5-63a2a7e1a6d4",
-   "metadata": {
-    "jp-MarkdownHeadingCollapsed": true
-   },
+   "metadata": {},
    "source": [
     "#### Manually modify the file `Fooocus/user_path_config.txt`\n",
     "Change\n",
@@ -388,9 +330,7 @@
   {
    "cell_type": "markdown",
    "id": "04064c0d-496a-43c0-8c1e-d059a1e93913",
-   "metadata": {
-    "jp-MarkdownHeadingCollapsed": true
-   },
+   "metadata": {},
    "source": [
     "## Install sd-webui (run once)"
    ]
@@ -449,6 +389,72 @@
     "#### 2. Manually modify the file `stable-diffusion/webui-user.sh`\n",
     "Dont forget to uncomment the line!! (delete the `#`)  \n",
     "change `#export COMMANDLINE_ARGS=\"\"` to  `export COMMANDLINE_ARGS=\"--xformers --share\"`"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4e695604-8d9b-4dac-82ec-c1d9f4d2aa61",
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true
+   },
+   "source": [
+    "## Download models (run whenever needed)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "05eb4405-c5bc-45cf-8f2f-f529c18170c1",
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [],
+   "source": [
+    "import huggingface_hub\n",
+    "\n",
+    "# SD models\n",
+    "local_dir = sd_model_dir / 'Stable-diffusion'\n",
+    "\n",
+    "# SD 1.5\n",
+    "repo_id='runwayml/stable-diffusion-v1-5'\n",
+    "filename = 'v1-5-pruned-emaonly.safetensors'\n",
+    "huggingface_hub.hf_hub_download(\n",
+    "    repo_id=repo_id,\n",
+    "    filename=filename,\n",
+    "    local_dir=local_dir\n",
+    ")\n",
+    "\n",
+    "# SDXL\n",
+    "repo_id='stabilityai/stable-diffusion-xl-base-1.0'\n",
+    "# Base model\n",
+    "filename = 'sd_xl_base_1.0.safetensors'\n",
+    "huggingface_hub.hf_hub_download(\n",
+    "    repo_id=repo_id,\n",
+    "    filename=filename,\n",
+    "    local_dir=local_dir\n",
+    ")\n",
+    "# VAE\n",
+    "filename = 'sd_xl_base_1.0_0.9vae.safetensors'\n",
+    "huggingface_hub.hf_hub_download(\n",
+    "    repo_id=repo_id,\n",
+    "    filename=filename,\n",
+    "    local_dir=local_dir\n",
+    ")\n",
+    "\n",
+    "# ControlNet (There's a LOT here, hopefully we have enough disk space 🤞)\n",
+    "local_dir = sd_model_dir / 'ControlNet'\n",
+    "\n",
+    "# ControlNet 1.1 \n",
+    "huggingface_hub.snapshot_download(\n",
+    "    repo_id='lllyasviel/ControlNet-v1-1',\n",
+    "    allow_patterns='*.pth',\n",
+    "    local_dir=local_dir\n",
+    ")\n",
+    "# ControlNet XL\n",
+    "huggingface_hub.snapshot_download(\n",
+    "    repo_id='lllyasviel/sd_control_collection',\n",
+    "    local_dir=local_dir\n",
+    ")"
    ]
   },
   {
