Update notebook (again)

--- a/samples/sd-webui-fooocus.ipynb
+++ b/samples/sd-webui-fooocus.ipynb
@@ -181,7 +181,9 @@
   {
    "cell_type": "markdown",
    "id": "d28c68bc-78c5-4d00-a420-02c1becdcef8",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true
+   },
    "source": [
     "## Install Fooocus (run once)"
    ]
@@ -295,16 +297,6 @@
    "outputs": [],
    "source": [
     "!python {fooocus_dir}/entry_with_update.py --share"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "39d4236c-099f-4d6b-9467-53dd9debc01b",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "clone_repo('https://github.com/konieshadow/Fooocus-API', home_dir)"
    ]
   },
   {
