--- a/samples/week09/Ngrok.ipynb
+++ b/samples/week09/Ngrok.ipynb
@@ -136,7 +136,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "authtoken = '2YGPoE4FKwUiTCuW9LqnAS7RP7W_3BjvM2dvnEntyPZ6i5q97'\n",
+    "authtoken = '<AUTHTOKEN>'\n",
     "port = 5000"
    ]
   },
