Reorganize folder and update notebooks!

--- a/samples/Ngrok.ipynb
+++ b/samples/Ngrok.ipynb
@@ -3,16 +3,14 @@
   {
    "cell_type": "markdown",
    "id": "c9be2349-bb2c-412a-a773-7ef1a46ff82d",
-   "metadata": {
-    "jp-MarkdownHeadingCollapsed": true
-   },
+   "metadata": {},
    "source": [
-    "## General Functions"
+    "General Functions"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "id": "8a3505c4-3045-44f2-8318-55349bafafd4",
    "metadata": {},
    "outputs": [],
@@ -30,19 +28,13 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9796b877-d027-47f4-83c0-90f1a2f06c0c",
-   "metadata": {},
-   "source": [
-    "## Ngrok"
-   ]
-  },
-  {
-   "cell_type": "markdown",
    "id": "e5021421-413a-4f77-9039-b4fac6741798",
    "metadata": {},
    "source": [
-    "1) Create Ngrok Account + Token + Domain\n",
-    "2) Install locally\n",
+    "Steps:\n",
+    "\n",
+    "1) Create [Ngrok Account](https://ngrok.com/) + [Token](https://dashboard.ngrok.com/tunnels/authtokens) + [Domain](https://dashboard.ngrok.com/cloud-edge/domains)\n",
+    "2) Install\n",
     "3) Run"
    ]
   },
@@ -53,7 +45,34 @@
     "jp-MarkdownHeadingCollapsed": true
    },
    "source": [
-    "### Installed (if not done yet)"
+    "## Install (run once)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "15bdb143-a50f-44d2-be1d-2d2fa4e60615",
+   "metadata": {},
+   "source": [
+    "Add your token below ⬇️  \n",
+    "⚠️ Do not save this notebook publicly with your token ⚠️ "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "22445efa-6047-4827-bb63-bb0f58e4f4dc",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "authtoken = '<TOKEN>'"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1209e279-8a3c-4dd6-8e2f-6198ca314813",
+   "metadata": {},
+   "source": [
+    "Dowload and install"
    ]
   },
   {
@@ -114,30 +133,21 @@
    ]
   },
   {
-   "cell_type": "raw",
-   "id": "099f476c-219d-48ed-851f-2ef774dd451a",
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "11805e54-4ba9-4100-bb8c-e309c3d3d722",
    "metadata": {},
+   "outputs": [],
    "source": [
     "!{ngrok_dir}/ngrok --version"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "8a2c45d0-db79-40fd-a62c-f192ce897737",
+   "id": "271183ff-87d0-48ca-901d-9e955b9a6e85",
    "metadata": {},
    "source": [
-    "### Run"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "22445efa-6047-4827-bb63-bb0f58e4f4dc",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "authtoken = '<AUTHTOKEN>'\n",
-    "port = 5000"
+    "Add token"
    ]
   },
   {
@@ -152,10 +162,23 @@
   },
   {
    "cell_type": "markdown",
-   "id": "560effd6-25b4-4102-b250-f1a7991391f3",
-   "metadata": {},
+   "id": "8a2c45d0-db79-40fd-a62c-f192ce897737",
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true
+   },
    "source": [
-    "Run"
+    "## 📍 Run"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ed8c564b-b0f4-4c6d-a71d-2b9276512bf5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "domain = '' # Leave blank if none\n",
+    "port = 8188 # Port of your app"
    ]
   },
   {
@@ -165,7 +188,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!{ngrok_dir}/ngrok http --domain=gibbon-classic-sheep.ngrok-free.app {port}"
+    "!{ngrok_dir}/ngrok http --domain={domain} {port}"
    ]
   }
  ],
