--- a/samples/sd-comfyui.ipynb
+++ b/samples/sd-comfyui.ipynb
@@ -2,6 +2,14 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "id": "ecf74805-71d8-4a40-a047-7effb5d0dfea",
+   "metadata": {},
+   "source": [
+    "On HSLU GPUHUB You must use the server template __CVAI admin__"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "5024c415-ef57-41fb-8379-fc3151f96bb3",
    "metadata": {
     "jp-MarkdownHeadingCollapsed": true
@@ -66,6 +74,65 @@
     "            print('Directory not found')\n",
     "    else:\n",
     "        print('Skipping')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "30bd12c4-856b-4488-b48d-1d6f4eb85adc",
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true
+   },
+   "source": [
+    "## Clone repo and setup Comfyui (run once)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f6494800-67f3-4b98-96fe-98809d21030b",
+   "metadata": {},
+   "source": [
+    "Clone Repo"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ae76836b-55dc-4c4f-b393-600d9bde371f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "clone_repo('https://github.com/comfyanonymous/ComfyUI', home_dir)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f5ff72be-6072-4c11-9848-ffd8cb511603",
+   "metadata": {},
+   "source": [
+    "### If SD-webui is installed we can use the models from there\n",
+    "\n",
+    "Show the stable diffusion webui dir:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1ae5ad46-29d7-4857-a23d-8d4d94ab2605",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sd_dir"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c535d730-edd7-4d98-97a5-63a2a7e1a6d4",
+   "metadata": {},
+   "source": [
+    "Manually modify the file `ComfyUI/extra_model_paths.yaml.example`\n",
+    "\n",
+    "1) Change `base_path: path/to/stable-diffusion-webui/` with the path from our install (see the value of the var `sd_dir` ⬆️)\n",
+    "2) Rename file to `ComfyUI/extra_model_paths.yaml`"
    ]
   },
   {
@@ -207,73 +274,20 @@
   },
   {
    "cell_type": "markdown",
-   "id": "30bd12c4-856b-4488-b48d-1d6f4eb85adc",
-   "metadata": {
-    "jp-MarkdownHeadingCollapsed": true
-   },
-   "source": [
-    "## Clone repo and setup Comfyui (run once)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "f6494800-67f3-4b98-96fe-98809d21030b",
-   "metadata": {},
-   "source": [
-    "Clone Repo"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "ae76836b-55dc-4c4f-b393-600d9bde371f",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "clone_repo('https://github.com/comfyanonymous/ComfyUI', home_dir)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "f5ff72be-6072-4c11-9848-ffd8cb511603",
-   "metadata": {
-    "jp-MarkdownHeadingCollapsed": true
-   },
-   "source": [
-    "### If SD-webui is installed we can use the models from there\n",
-    "\n",
-    "Show the stable diffusion webui dir:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "1ae5ad46-29d7-4857-a23d-8d4d94ab2605",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "sd_dir"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "c535d730-edd7-4d98-97a5-63a2a7e1a6d4",
-   "metadata": {},
-   "source": [
-    "Manually modify the file `ComfyUI/extra_model_paths.yaml.example`\n",
-    "\n",
-    "1) Change `base_path: path/to/stable-diffusion-webui/` with the path from our install (see the value of the var `sd_dir` ⬆️)\n",
-    "2) Rename file to `ComfyUI/extra_model_paths.yaml`"
-   ]
-  },
-  {
-   "cell_type": "markdown",
    "id": "0342babf-7710-405b-ba6f-c0551234911b",
+   "metadata": {},
+   "source": [
+    "## Install extensions and download models (run once)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e17e5408-f767-4572-b80a-66389221d370",
    "metadata": {
     "jp-MarkdownHeadingCollapsed": true
    },
    "source": [
-    "## Install extensions (run once)"
+    "### Extensions"
    ]
   },
   {
@@ -333,9 +347,19 @@
   {
    "cell_type": "markdown",
    "id": "06972d77-ac96-4882-b6a6-dfa8e68a71b2",
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true
+   },
+   "source": [
+    "### Models"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "60d15dee-3803-4e92-94ba-2a91a695d379",
    "metadata": {},
    "source": [
-    "Download models  \n",
+    "Download models for AnimateDiff  \n",
     "https://github.com/Kosinkadink/ComfyUI-AnimateDiff-Evolved#how-to-use"
    ]
   },
@@ -380,10 +404,87 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5d959efe-839e-4e90-bf5a-a28b82785a05",
+   "id": "e5367c21-3e64-43db-94e9-701638bae27c",
    "metadata": {},
    "source": [
-    "## Run it"
+    "Autoencoder used for SD"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "06366093-0930-4b0f-8bc4-af5a36e2d839",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# SD models\n",
+    "local_dir = sd_model_dir / 'VAE'\n",
+    "\n",
+    "# SD VAE\n",
+    "repo_id='stabilityai/sd-vae-ft-mse-original'\n",
+    "filename = 'vae-ft-mse-840000-ema-pruned.safetensors'\n",
+    "huggingface_hub.hf_hub_download(\n",
+    "    repo_id=repo_id,\n",
+    "    filename=filename,\n",
+    "    local_dir=local_dir\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3844d80b-aea9-4ee5-9b32-40645f7eb52f",
+   "metadata": {},
+   "source": [
+    "A nice / fun SD model, we download it in the default stable-diffusion model dir "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "898c7828-d4f6-4081-b3a7-6d1400209882",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# https://civitai.com/models/7371/rev-animated\n",
+    "repo_id='s6yx/ReV_Animated'\n",
+    "local_dir = sd_model_dir / 'Stable-diffusion'\n",
+    "filename = 'rev_1.2.2.safetensors'\n",
+    "subfolder = 'rev_1.2.2'\n",
+    "\n",
+    "huggingface_hub.hf_hub_download(\n",
+    "    repo_id=repo_id,\n",
+    "    filename=filename,\n",
+    "    subfolder=subfolder,\n",
+    "    local_dir=local_dir\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a5208959-fd1b-464a-b9c6-2c780fb23115",
+   "metadata": {},
+   "source": [
+    "We move it to the root of the sd models dir, don't really have to but it's \"cleaner\" this way"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f911319e-1401-4cb3-bca2-f2fbc5fc4a5f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!mv {local_dir}/{subfolder}/{filename} {local_dir}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5d959efe-839e-4e90-bf5a-a28b82785a05",
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true
+   },
+   "source": [
+    "## 📍 Run"
    ]
   },
   {
@@ -397,20 +498,22 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6b7789a1-93ed-467f-80e1-e01fdd534ea5",
+   "id": "3d6e83f8-7368-4b22-9d50-eb135b046c4f",
    "metadata": {},
    "outputs": [],
    "source": [
-    "!python {comfyui_dir}/main.py"
+    "os.chdir(comfyui_dir)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e61c4e90-7ed1-42c3-9622-42c0b2cee84c",
+   "id": "6b7789a1-93ed-467f-80e1-e01fdd534ea5",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "!python main.py"
+   ]
   }
  ],
  "metadata": {
