--- a/samples/sd-webui-fooocus.ipynb
+++ b/samples/sd-webui-fooocus.ipynb
@@ -5,7 +5,72 @@
    "id": "56730971-1dd2-4c4f-9435-1c511e80fa50",
    "metadata": {},
    "source": [
-    "Notebook to run sd-webui and Fooocus on hslu gpu hub"
+    "On HSLU GPUHUB You must use the server template __CVAI admin__"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3117a0f2-83ec-4bcf-9904-6eb896eef74f",
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true
+   },
+   "source": [
+    "# Setup (run each time)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "cc449778-50ae-4f4d-a35e-6a09220be332",
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true
+   },
+   "source": [
+    "## Declare var + functions"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "45c14b3e-a73d-45d5-aa28-3d652c95b0de",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import os\n",
+    "import git\n",
+    "import shutil\n",
+    "from pathlib import Path\n",
+    "\n",
+    "# Home path (only works on Linux)\n",
+    "# https://stackoverflow.com/a/58988310\n",
+    "home_dir = Path(os.readlink('/proc/%s/cwd' % os.environ['JPY_PARENT_PID']))\n",
+    "\n",
+    "# Paths\n",
+    "sd_dir = home_dir / 'stable-diffusion-webui'\n",
+    "sd_model_dir = sd_dir / 'models'\n",
+    "sd_extensions_dir = sd_dir / 'extensions'\n",
+    "fooocus_dir = home_dir / 'Fooocus'\n",
+    "fooocus_api_dir = home_dir / 'Fooocus-API'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8ae7c407-022a-47a5-84be-88bd59235b7a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Clone a repo\n",
+    "def clone_repo(git_url, target_dir):\n",
+    "    \n",
+    "    # Extract repo name and create path\n",
+    "    repo_name = git_url.split('/')[-1]\n",
+    "\n",
+    "    # Create path\n",
+    "    repo_dir = target_dir / repo_name\n",
+    "\n",
+    "    # Clone if does not exist\n",
+    "    if not repo_dir.exists():\n",
+    "        git.Repo.clone_from(git_url, repo_dir)"
    ]
   },
   {
@@ -15,7 +80,7 @@
     "jp-MarkdownHeadingCollapsed": true
    },
    "source": [
-    "## Install packages (run each time)"
+    "## Install packages"
    ]
   },
   {
@@ -115,57 +180,144 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5024c415-ef57-41fb-8379-fc3151f96bb3",
+   "id": "6a6de2ca-d790-4fb6-b9d0-370d71eb2977",
    "metadata": {
     "jp-MarkdownHeadingCollapsed": true
    },
    "source": [
-    "## Declare var + functions (run each time)"
+    "# SD-WEBUI"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "009d984d-c020-4fbd-9536-4d8125c318fd",
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true
+   },
+   "source": [
+    "## Install repo (run once)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "78676fa7-9767-4d95-8490-24772d53a341",
+   "metadata": {},
+   "source": [
+    "**⚠️** Warning: only run the next cell if you want to delete the existing copy of sd-webui **⚠️**"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "45c14b3e-a73d-45d5-aa28-3d652c95b0de",
+   "id": "c8e39014-541b-49e7-be30-06cf9524b504",
    "metadata": {},
    "outputs": [],
    "source": [
-    "import os\n",
-    "import git\n",
-    "import shutil\n",
-    "from pathlib import Path\n",
-    "\n",
-    "# Home path (only works on Linux)\n",
-    "# https://stackoverflow.com/a/58988310\n",
-    "home_dir = Path(os.readlink('/proc/%s/cwd' % os.environ['JPY_PARENT_PID']))\n",
-    "\n",
-    "# Paths\n",
-    "sd_dir = home_dir / 'stable-diffusion-webui'\n",
-    "sd_model_dir = sd_dir / 'models'\n",
-    "sd_extensions_dir = sd_dir / 'extensions'\n",
-    "fooocus_dir = home_dir / 'Fooocus'\n",
-    "fooocus_api_dir = home_dir / 'Fooocus-API'"
+    "answer = input(\"-> Are you sure you want to delete 'stable-diffusion-webui' [y | n]: \")\n",
+    "if answer == 'y':\n",
+    "    if sd_dir.exists():\n",
+    "        shutil.rmtree(sd_dir)\n",
+    "        print('Folder deleted')\n",
+    "    else:\n",
+    "        print('Folder not found')\n",
+    "else:\n",
+    "    print('Skipping')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "07495985-08e4-4a9d-add5-58aaab97df93",
+   "metadata": {},
+   "source": [
+    "Clone and cd into repo"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8ae7c407-022a-47a5-84be-88bd59235b7a",
+   "id": "c42bf2a9-790e-45b9-9b0c-59bcd3cc73cb",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Clone a repo\n",
-    "def clone_repo(git_url, target_dir):\n",
-    "    \n",
-    "    # Extract repo name and create path\n",
-    "    repo_name = git_url.split('/')[-1]\n",
+    "clone_repo('https://github.com/AUTOMATIC1111/stable-diffusion-webui', home_dir)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ba5952d2-3494-4735-a050-e9786c0faf1c",
+   "metadata": {},
+   "source": [
+    "#### 1. Manually modify the file `stable-diffusion/webui.sh`\n",
+    "Change `use_venv=1` to `use_venv=0`\n",
+    "#### 2. Manually modify the file `stable-diffusion/webui-user.sh`\n",
+    "Dont forget to uncomment the line!! (delete the `#`)  \n",
+    "change `#export COMMANDLINE_ARGS=\"\"` to  `export COMMANDLINE_ARGS=\"--xformers --share\"`"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3af55ca9-9aa7-41a4-be5d-cbdd82c11217",
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true
+   },
+   "source": [
+    "## Install extensions (run whenever needed)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d19466d2-4ffa-45a7-bc2d-e11736106c36",
+   "metadata": {},
+   "source": [
+    "You can find extensions via the UI then copy paste their repo here"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b06af14d-ee15-482c-82ba-1c27c42cbb16",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Use urls without the .git\n",
+    "git_urls = {\n",
+    "    'https://github.com/zanllp/sd-webui-infinite-image-browsing',\n",
+    "    'https://github.com/Mikubill/sd-webui-controlnet'\n",
+    "}\n",
     "\n",
-    "    # Create path\n",
-    "    repo_dir = target_dir / repo_name\n",
-    "\n",
-    "    # Clone if does not exist\n",
-    "    if not repo_dir.exists():\n",
-    "        git.Repo.clone_from(git_url, repo_dir)"
+    "# Iterate through git repos and clone them\n",
+    "for url in git_urls:\n",
+    "    clone_repo(url, sd_extensions_dir)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9629a71c-dd09-4661-83b8-1ab04281cc0e",
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true
+   },
+   "source": [
+    "## 📍 Run"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0a5e171d-03b7-4a98-ba5d-085d775b0ad9",
+   "metadata": {},
+   "source": [
+    "You might need to download some models before starting the UI the first time"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "89641969-69a7-4742-8590-291efb2086e9",
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [],
+   "source": [
+    "!cd {sd_dir} && ./webui.sh"
    ]
   },
   {
@@ -185,7 +337,7 @@
     "jp-MarkdownHeadingCollapsed": true
    },
    "source": [
-    "## Install Fooocus (run once)"
+    "## Install repo (run once)"
    ]
   },
   {
@@ -286,7 +438,7 @@
     "jp-MarkdownHeadingCollapsed": true
    },
    "source": [
-    "## 📍 Run Fooocus"
+    "## 📍 Run"
    ]
   },
   {
@@ -301,86 +453,20 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b87df6a1-78e0-4abb-980b-337858b2130a",
-   "metadata": {
-    "jp-MarkdownHeadingCollapsed": true
-   },
-   "source": [
-    "# SD-WEBUI"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "04064c0d-496a-43c0-8c1e-d059a1e93913",
-   "metadata": {},
-   "source": [
-    "## Install sd-webui (run once)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "1330da86-f4fe-491b-b578-050cec11558b",
-   "metadata": {},
-   "source": [
-    "**⚠️** Warning: only run the next cell if you want to delete the existing copy of sd-webui **⚠️**"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "c8e39014-541b-49e7-be30-06cf9524b504",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "answer = input(\"-> Are you sure you want to delete 'stable-diffusion-webui' [y | n]: \")\n",
-    "if answer == 'y':\n",
-    "    if sd_dir.exists():\n",
-    "        shutil.rmtree(sd_dir)\n",
-    "        print('Folder deleted')\n",
-    "    else:\n",
-    "        print('Folder not found')\n",
-    "else:\n",
-    "    print('Skipping')"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "3b6846ed-7b44-4ddd-9971-9e01cb65efe4",
-   "metadata": {},
-   "source": [
-    "Clone and cd into repo"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "c42bf2a9-790e-45b9-9b0c-59bcd3cc73cb",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "clone_repo('https://github.com/AUTOMATIC1111/stable-diffusion-webui', home_dir)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "853ee857-a85e-4354-9bf1-cfc158552e87",
-   "metadata": {},
-   "source": [
-    "#### 1. Manually modify the file `stable-diffusion/webui.sh`\n",
-    "Change `use_venv=1` to `use_venv=0`\n",
-    "#### 2. Manually modify the file `stable-diffusion/webui-user.sh`\n",
-    "Dont forget to uncomment the line!! (delete the `#`)  \n",
-    "change `#export COMMANDLINE_ARGS=\"\"` to  `export COMMANDLINE_ARGS=\"--xformers --share\"`"
-   ]
-  },
-  {
-   "cell_type": "markdown",
    "id": "4e695604-8d9b-4dac-82ec-c1d9f4d2aa61",
    "metadata": {
     "jp-MarkdownHeadingCollapsed": true
    },
    "source": [
-    "## Download models (run whenever needed)"
+    "# Download additional models (run whenever needed)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "88d6faa0-77c7-41dd-95da-f49579dbcf73",
+   "metadata": {},
+   "source": [
+    "Both sd-webui and Fooocus should download a default model the first time you start them but you will need to download some additional models for ControlNet"
    ]
   },
   {
@@ -394,6 +480,37 @@
    "source": [
     "import huggingface_hub\n",
     "\n",
+    "# ControlNet (There's a LOT here, hopefully we have enough disk space 🤞)\n",
+    "local_dir = sd_model_dir / 'ControlNet'\n",
+    "\n",
+    "# ControlNet 1.1 \n",
+    "huggingface_hub.snapshot_download(\n",
+    "    repo_id='lllyasviel/ControlNet-v1-1',\n",
+    "    allow_patterns='*.pth',\n",
+    "    local_dir=local_dir\n",
+    ")\n",
+    "# ControlNet XL\n",
+    "huggingface_hub.snapshot_download(\n",
+    "    repo_id='lllyasviel/sd_control_collection',\n",
+    "    local_dir=local_dir\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "444ab754-5212-41a0-a528-090d652d6331",
+   "metadata": {},
+   "source": [
+    "We also download the default sd1.5 and xl models in case they are not there"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7f7def97-b92c-40e6-8f81-54f2dc040419",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# SD models\n",
     "local_dir = sd_model_dir / 'Stable-diffusion'\n",
     "\n",
@@ -421,87 +538,83 @@
     "    repo_id=repo_id,\n",
     "    filename=filename,\n",
     "    local_dir=local_dir\n",
-    ")\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "70f0799e-0414-411c-8619-5979ddabdd3c",
+   "metadata": {},
+   "source": [
+    "An autoencoder used for SD"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "88a5382e-66e1-46a3-a225-d2b3ded6be5e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# SD models\n",
+    "local_dir = sd_model_dir / 'VAE'\n",
     "\n",
-    "# ControlNet (There's a LOT here, hopefully we have enough disk space 🤞)\n",
-    "local_dir = sd_model_dir / 'ControlNet'\n",
-    "\n",
-    "# ControlNet 1.1 \n",
-    "huggingface_hub.snapshot_download(\n",
-    "    repo_id='lllyasviel/ControlNet-v1-1',\n",
-    "    allow_patterns='*.pth',\n",
-    "    local_dir=local_dir\n",
-    ")\n",
-    "# ControlNet XL\n",
-    "huggingface_hub.snapshot_download(\n",
-    "    repo_id='lllyasviel/sd_control_collection',\n",
+    "# SD VAE\n",
+    "repo_id='stabilityai/sd-vae-ft-mse-original'\n",
+    "filename = 'vae-ft-mse-840000-ema-pruned.safetensors'\n",
+    "huggingface_hub.hf_hub_download(\n",
+    "    repo_id=repo_id,\n",
+    "    filename=filename,\n",
     "    local_dir=local_dir\n",
     ")"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "7f61630d-3c7c-4194-a39d-e3e2a3125333",
-   "metadata": {
-    "jp-MarkdownHeadingCollapsed": true
-   },
-   "source": [
-    "## Install sd-webui extensions (run whenever needed)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "1310dd69-e2f6-4729-b8b4-09cef2676b36",
+   "id": "a8d733f1-50d5-490f-ae43-cecce1dc052f",
    "metadata": {},
    "source": [
-    "You can find extensions via the UI then copy paste their repo here"
+    "A nice / fun SD model (1.5)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b06af14d-ee15-482c-82ba-1c27c42cbb16",
+   "id": "0c209595-0ef0-49de-8771-bf188324f5f8",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Use urls without the .git\n",
-    "git_urls = {\n",
-    "    'https://github.com/zanllp/sd-webui-infinite-image-browsing',\n",
-    "    'https://github.com/Mikubill/sd-webui-controlnet'\n",
-    "}\n",
+    "# https://civitai.com/models/7371/rev-animated\n",
+    "repo_id='s6yx/ReV_Animated'\n",
+    "local_dir = sd_model_dir / 'Stable-diffusion'\n",
+    "filename = 'rev_1.2.2.safetensors'\n",
+    "subfolder = 'rev_1.2.2'\n",
     "\n",
-    "# Iterate through git repos and clone them\n",
-    "for url in git_urls:\n",
-    "    clone_repo(url, sd_extensions_dir)"
+    "huggingface_hub.hf_hub_download(\n",
+    "    repo_id=repo_id,\n",
+    "    filename=filename,\n",
+    "    subfolder=subfolder,\n",
+    "    local_dir=local_dir\n",
+    ")"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "88cf58a2-e13f-4f8a-9ef6-ee7717640e66",
+   "id": "40d51782-596b-40ea-9c4d-486a57c70ebc",
    "metadata": {},
    "source": [
-    "## 📍 Run sd-webui"
+    "We move it to the root of the sd models dir. We don't really have to but it's \"cleaner\" this way"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "89641969-69a7-4742-8590-291efb2086e9",
-   "metadata": {
-    "scrolled": true
-   },
-   "outputs": [],
-   "source": [
-    "!cd {sd_dir} && ./webui.sh"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "4001c380-2728-4ad5-9b6c-f4441e11e00a",
+   "id": "f8903c9e-ade5-4c3f-9025-b59418481d5f",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "!mv {local_dir}/{subfolder}/{filename} {local_dir}"
+   ]
   }
  ],
  "metadata": {
